<resources>

    <string name="app_name">Ucare</string>
    <string name="Stsrtapp">Get Things To Do</string>
    <string name="Welcometoapp" />
    <string name="Welcomeapp">"tarted to get in to this app   "</string>
    <string name="welcomeapp">"Welcome to the Doctors society and get more advantage of being an
        app user inorder to Get advises from several doctors for your problems  Get started to get in to this app "</string>
    <string name="getapp">Get Started</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="registerlink">Don\'t have an Account?Sign Up</string>
    <string name="Welocomeon">Welcome On Board!</string>
    <string name="letsstart">Let\'s Start To Search For...</string>
    <string name="registertxt">Register</string>
    <string name="alreadyaccounttxt">"Already have an Account?Sign "</string>
    <string name="labtesttxt">Lab Tests</string>
    <string name="test1">Complete blood count</string>
    <string name="test2">Imaging</string>
    <string name="test3">Urynalysis</string>
    <string name="myform">My Appointments</string>
    <string name="canceltest">Cancel</string>
    <string name="editmytxt">Edit</string>
    <string name="col1">RegNo</string>
    <string name="col2">Name</string>
    <string name="col3">Address</string>
    <string name="row1txt">E101</string>
    <string name="row2txt">Priya</string>
    <string name="row3txt">Jaffna</string>
    <string name="para1">Hospitalmanagement houses a unique portfolio of services that keep healthcareprofessionals abreast of
        the latest and most significant developments within their clinical, surgical or management area.</string>
    <string name="para2">we have over two decades of experience in the healthcare sector, and is known for providing quality
        healthcare and valuable experience to all domestic and international patients. Our healthcare
        offerings are supported by a team of compassionate and dedicated medical professionals who have rich
        knowledge and experience in their respective domains.</string>
    <string name="hintreg">RegNo</string>
    <string name="hintname">Name</string>
    <string name="hintage">Age</string>
    <string name="hintadd">Address</string>
    <string name="hintph">PhNo</string>
    <string name="hintdate">Date</string>
    <string name="myreg">RegNo</string>
    <string name="myage">Age</string>
    <string name="myaddress">Address</string>
    <string name="myphno">PhNo</string>
    <string name="mydate">Date</string>
    <string name="viewbtn">View</string>
    <string name="bmihead">BMI Calculator</string>
    <string name="weight">Enter Weight</string>
    <string name="height">Enter Height</string>
    <string name="btncal">Calculate</string>
    <string name="view2">View</string>
    <string name="view1">View</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="th_butt1">Doctor Appointment</string>
    <string name="th_butt2">Lab Testing</string>
    <string name="th_butt3">Covid-19</string>

    <string name="th_title">Appointment Booking</string>
    <string name="th_name">Name</string>
    <string name="th_age">Age</string>
    <string name="th_address">Address</string>
    <string name="th_mobile">Mobile</string>
    <string name="th_date">Date</string>
    <string name="th_time">Time</string>
    <string name="th_nic">Nic Number</string>
    <string name="th_make_as">Make As Appointment</string>

    <!-- activity special grid  -->
    <string name="th_special">Speciality</string>
    <string name="th_grid1">Cardiologist</string>
    <string name="th_grid2">Urologist</string>
    <string name="th_grid3">Neurologist</string>
    <string name="th_grid4">Nutritionist</string>
    <string name="th_grid5">Dental</string>
    <string name="th_grid6">Eye</string>

    <!-- activity view doctor  -->
    <string name="th_doctor">Doctor</string>

    <!-- activity view reserve  -->
    <string name="th_reserve">Reserved Booking</string>
    <string name="th_text1">Name:Thusara Arul</string>
    <string name="th_text2">Speciality:Eye</string>
    <string name="th_text3">Dr.Name: Dr.K.Jeyasree</string>
    <string name="th_text4">Date:8/8/2021</string>
    <string name="th_text5">Time:4.00PM</string>
    <string name="th_update1">Update</string>
    <string name="th_delete1">Delete</string>

    <string name="th_text1.1">Name:Joyce Meyer</string>
    <string name="th_text2.1">Speciality:Urologist</string>
    <string name="th_text3.1">Dr.Name: Dr.K.Rohan</string>
    <string name="th_text4.1">Date:18/8/2021</string>
    <string name="th_text5.1">Time:10.00PM</string>
    <string name="th_update2">Update</string>



    <!-- activity sample  -->
    <string name="th_doctor1">Dr.K.Jeyasree</string>
    <string name="th_doc_text1">Cardiologist</string>
    <string name="th_doc_text2">5years Experience</string>
    <string name="th_doc_text3">158 Reviews</string>
    <string name="th_book">Book</string>
    <string name="th_doctor2">Dr.D.E.Fernando</string>
    <string name="th_doctor3">Dr.S.K.Shakti</string>
    <string name="th_doctor4">Dr.L.K.Meyer</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thcontactsend">send now</string>

    <!-- activity viewbooking  -->
    <string name="th_viewbook">View Booking</string>
    <string name="th_view_1">Name : Thusara Arul</string>
    <string name="th_view_2">Specialty:Cardiologist</string>
    <string name="th_view_3">Consultant Name : Dr.k.Rohan</string>
    <string name="th_view_4">Date:1.10.2021  </string>
    <string name="th_view_5">Time:10.00 Am</string>
    <string name="th_view_6">Fees: Rs 2000.00</string>
    <string name="th_pay">Pay</string>
    <string name="th_reserve12">Reserve</string>


    <!-- activity update  -->
    <string name="th_title_1">Update booking</string>

    <!-- activity update  -->
    <string name="thcontactname">Name</string>
    <string name="thcontactemail">Name</string>
    <string name="thcontactnumber">Name</string>
    <string name="thcontactmessage">Name</string>
    <string name="thcontactsend">Send Now</string>
    <string name="th_reserved1">ok</string>

    <string name="welcomeapp">"Welcome to the Doctors society and get more advantage of being an
    app user inorder to Get advises from several doctors for your problems  Get started to get in to this app "</string>
    <string name="getapp">Get Started</string>
    <string name="Stsrtapp">Get Things To Do</string>

    <string name="textView">My Account</string>
    <string name="Name">Ratna Nayake</string>
    <string name="name">Ratna Nayake</string>
    <string name="phone">0775634895</string>
    <string name="mail">ratnaN@gmail.com</string>
    <string name="button_logout">LOGOUT</string>
    <string name="home">Colombo</string>
    <string name="button_save">SAVE</string>
    <string name="phoneno">Phone No</string>
    <string name="mailid">Mail</string>
    <string name="nicno">NIC</string>
    <string name="home_add">Home</string>
    <string name="payment">Payment Method</string>
    <string name="paymentMethod">Select Payment Method</string>
    <string name="recom_method">Recommended Method(s)</string>
    <string name="btn_card">Card Payment</string>
    <string name="btn_card2">CASH PAYMENT</string>
    <string name="card" />
    <string name="card_details">Card Details</string>
    <string name="cardDetails">Card Number</string>
    <string name="cardnum">Number</string>
    <string name="details">Add your card details</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Name On Card</string>
    <string name="type">Card Type</string>
    <string name="valid">Valid Through</string>
    <string name="cvc">CVN Code</string>
    <string name="checkBox">Save my card details for faster payments.</string>
    <string name="con">CONTINUE</string>
    <string name="button_continue">CONTINUE</string>
    <string name="label1">Thanks for choosing</string>
    <string name="label2">UCARE...</string>
    <string name="total">TOTAL : </string>
    <string name="totalvalue">1500.00</string>
    <string name="item1">01    Blood Test</string>
    <string name="viewRecipt">Here is your receipt for Ucare</string>
    <string name="btn_viewreceipt">VIEW RECEIPT</string>
    <string name="btn_skip">SKIP</string>
    <string name="pay_meth">My Payment Methods</string>
    <string name="cardnu">5XXX XXXX XXXX 6394</string>
    <string name="exp">Exp 09 / 25</string>
    <string name="add_card">ADD ANOTHER CARD</string>
    <string name="item2">01    Rubella</string>
    <string name="price1">LKR  500.00</string>
    <string name="price2">LKR 1000.00</string>
    <string name="amount">Amount Charged</string>
    <string name="agree"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="cash">This option is not available when you are paying with cash.
        Please choose another option</string>
    <string name="app">Appointments</string>
    <string name="appointment">Appointments</string>
    <string name="doc">Doctor Appointments</string>
    <string name="vaccine">Vaccine Appointments</string>
    <string name="test">Test Appointments</string>
    <string name="past">Past Appointments</string>
    <string name="feedback">FeedBack</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
</resources>

