<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_logout6"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:text="@string/button_save"
        android:textSize="16sp"
        app:backgroundTint="#44CCC4"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="612dp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="540dp" />

    <TextView
        android:id="@+id/card_number8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="122dp" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="373dp"
        android:layout_height="490dp"
        app:srcCompat="@drawable/form"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/details2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="78dp" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="436dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/bottom"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="663dp" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="59dp"
        android:layout_height="43dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:textColor="#040303"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valid"
        android:textColor="#040303"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvc"
        android:textColor="#040303"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="#040303"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="329dp" />
</androidx.constraintlayout.widget.ConstraintLayout>