<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label4"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="@string/totalvalue"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/label6"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:text="@string/totalvalue"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="414dp" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="414dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="@string/label2"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="137dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:text="@string/label1"
        android:textColor="#000000"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:text="@string/amount"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="414dp" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="435dp"
        android:layout_height="69dp"
        app:srcCompat="@drawable/bottom"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="675dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="277dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:text="@string/item1"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:text="@string/item2"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="347dp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price1"
        tools:layout_editor_absoluteX="283dp"
        tools:layout_editor_absoluteY="286dp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price2"
        tools:layout_editor_absoluteX="283dp"
        tools:layout_editor_absoluteY="338dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="397dp" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="106dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/mac"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="446dp" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="260dp"
        android:layout_height="213dp"
        app:srcCompat="@drawable/undraw_Credit_card_re_blml"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="462dp" />

</androidx.constraintlayout.widget.ConstraintLayout>