<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_logout5"
        android:layout_width="247dp"
        android:layout_height="58dp"
        android:text="@string/add_card"
        android:textSize="16sp"
        app:backgroundTint="#44CCC4"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="527dp" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="422dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/bottom"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="678dp" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="112dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="149dp"
        android:layout_height="32dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:text="@string/pay_meth"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:text="@string/cardnu"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="346dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:text="@string/exp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="274dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/mac"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="151dp" />
</androidx.constraintlayout.widget.ConstraintLayout>