<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_continue"
        android:layout_width="127dp"
        android:layout_height="59dp"
        android:text="@string/button_continue"
        android:textSize="16sp"
        app:backgroundTint="#44CCC4"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="605dp" />

    <TextView
        android:id="@+id/card_number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="131dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="429dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/bottom"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="680dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="424dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/top"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="-21dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#44CCC4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="69dp"
        android:layout_height="49dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/card_details"
        android:layout_width="197dp"
        android:layout_height="38dp"
        android:text="@string/card_details"
        android:textColor="#FFFDFD"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="373dp"
        android:layout_height="490dp"
        app:srcCompat="@drawable/form"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="78dp" />

    <TextView
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/card_number4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/card_number5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valid"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/card_number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvc"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/card_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="324dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="274dp" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="149dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="481dp" />

    <EditText
        android:id="@+id/editTextNumber5"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="478dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="534dp" />

</androidx.constraintlayout.widget.ConstraintLayout>